# Musical-App

./: .gitignore  AudioGenerator.cpp  AudioGenerator.h  AudioParam.h  CMakeLists.txt  README.md  SharedAudioParams.h  main.cpp
audio/: Delay.cpp  Delay.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LowPassFilter.cpp  LowPassFilter.h  Oscillator.cpp  Oscillator.h  WavOut.h
audioEngine/: Delay.cpp  Delay.h  Envelope.cpp  Envelope.h  LowPassFilter.cpp  LowPassFilter.h  Oscillator.cpp  Oscillator.h  Synth.cpp  Synth.h
engine/: AudioGenerator.cpp  AudioGenerator.h  AudioParam.cpp  AudioParam.h
gui/: MainWindow.cpp  MainWindow.h
projet/: CMakeLists.txt
utils/: Constants.h
